--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ sysinfo.txt
 !Assets\
 ProjectSettings/ProjectSettings.asset
 ProjectSettings/GraphicsSettings.asset
-ProjectSettings/ProjectSettings.asset
+ProjectSettings/GraphicsSettings.assetProjectSettings/ProjectSettings.asset
