--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ sysinfo.txt
 ProjectSettings/ProjectSettings.asset
 ProjectSettings/GraphicsSettings.asset
 ProjectSettings/GraphicsSettings.assetProjectSettings/ProjectSettings.asset
+
+ProjectSettings/ProjectSettings.asset
