added ignore meta

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,31 @@ ProjectSettings/GraphicsSettings.asset
 ProjectSettings/GraphicsSettings.assetProjectSettings/ProjectSettings.asset
 
 ProjectSettings/ProjectSettings.asset
+
+*.meta
+
+*.meta
+
+*.meta
+
+Assets/DOOR SCRIPT/SCRIPTS.meta
+
+Assets/DOOR SCRIPT/DEMO.meta
+
+Assets/DOOR SCRIPT/ASSETS/MATERIALS.meta
+
+Assets/DOOR SCRIPT/SUPPORT.meta
+
+*.meta
+
+Assets/DOOR SCRIPT/SCRIPTS.meta
+
+Assets/DOOR SCRIPT/DEMO.meta
+
+Assets/DOOR SCRIPT/ASSETS/MATERIALS.meta
+
+Assets/DOOR SCRIPT/ASSETS.meta
+
+Assets/DOOR SCRIPT.meta
+
+Assets/DOOR SCRIPT/SUPPORT.meta
